Made body overflow hidden to prevent scrolling when contact form is open

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 * {
   box-sizing: border-box;
   margin: 0;
+}
 
+body.no-scroll {
+  overflow: hidden;
 }
